--- a/post.html
+++ b/post.html
@@ -7,15 +7,14 @@
 </head>
 
 <body>
-<p> On my first day at CSSI, we have learned about:
-</p>
+<p> On my first day at CSSI, we have learned about:</p>
 
 <ul>
   <li> The command key </li>
   <li> Basic HTML </li>
   <li> Basic and more advanced CSS </li>
-
 </ul>
+
 </body>
 
 </html>
