--- a/Cathleen.html
+++ b/Cathleen.html
@@ -29,7 +29,7 @@
 <ul>
   <li><a href= "https://www.facebook.com/cathleenyangg"> Facebook </a> </li>
   <li><a href= "https://www.instagram.com/cathleenyangg"> Instagram </a></li>
-  <li><a href= "https://www.facebook.com/catyangg"> Twitter </a></li>
+  <li><a href= "https://www.twitter.com/catyangg"> Twitter </a></li>
 </ul>
 
 <h2 class="title" >My Favorite Movies</h2>
