New version of the blog after fixing GitHub

--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
 <head>
   <title> Blogasaurus </title>
-  <h1> Blogasaurus </h1>
-  <link rel= "stylesheet" href="helloo.css" >
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  <link rel= "stylesheet" href="indexstyle.css" >
 </head>
 
 <body>
-  <div>
-<ul>
-  <li> <a href= "Cathleen.html"> All About Me </a> </li>
-  <li> <a href= "Post.html"> My First Day at CSSI </a> </li>
-</ul>
-</div>
+
+  <div id="header">
+    <h1> Blogasaurus </h1>
+  </div>
+
+  <div id="links">
+  <p>
+    <a href= "profile.html"> All About Me </a>
+    <br>
+    <a href= "photos.html"> Photo Gallery </a>
+  </p>
+  </div>
 
 </body>
 </html>
